objects/FeedViewComponents__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>Account_Component_1_Section_Name__c</fullName>
        <defaultValue>&quot;Billing Details&quot;</defaultValue>
        <label>Account Component 1 Section Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Component_2_Section_Name__c</fullName>
        <defaultValue>&quot;SLA Summary&quot;</defaultValue>
        <label>Account Component 2 Section Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Component_1_Section_Name__c</fullName>
        <defaultValue>&quot;Product Details&quot;</defaultValue>
        <label>Case Component 1 Section Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Component_2_Section_Name__c</fullName>
        <defaultValue>&quot;SLA Management&quot;</defaultValue>
        <label>Case  Component 2 Section Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Component_1_Section_Name__c</fullName>
        <defaultValue>&quot;Phone Numbers&quot;</defaultValue>
        <label>Contact Component 1 Section Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Component_2_Section_Name__c</fullName>
        <defaultValue>&quot;Address Details&quot;</defaultValue>
        <label>Contact Component 2 Section Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Component_1_Section_Name__c</fullName>
        <defaultValue>&quot;Lead Quality&quot;</defaultValue>
        <label>Lead Component 1 Section Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Component_2_Section_Name__c</fullName>
        <defaultValue>&quot;Address Details&quot;</defaultValue>
        <label>Lead Component 2 Section Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Component_1_Section_Name__c</fullName>
        <defaultValue>&quot;Competitive Landscape&quot;</defaultValue>
        <label>Opportunity Component 1 Section Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Component_2_Section_Name__c</fullName>
        <defaultValue>&quot;Forecast&quot;</defaultValue>
        <label>Opportunity  Component 2 Section Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>FeedViewComponents</label>
</CustomObject>